--- a/code.html
+++ b/code.html
@@ -41,7 +41,7 @@
             /* 範例：--body-background-image: url("https://example.com/your-background.jpg"); */
             /* 或：--body-background-image: url("images/background-pattern.png"); */
             /* 如果要移除背景圖片，請設回 'none'。 */
-            --body-background-image: none; /* 頁面背景圖片 */
+            --body-background-image: https://pbs.twimg.com/media/Gr2MnK4X0AApzE5?format=jpg&name=small; /* 頁面背景圖片 */
 
             /* 'auto': 圖片原始尺寸
              * 'cover': 圖片會完全覆蓋背景區域，可能會裁切部分圖片
