--- a/code.html
+++ b/code.html
@@ -38,10 +38,10 @@
 
 
             /* --- 背景圖片設定 (請將 'none' 替換為 'url("您的圖片網址或相對路徑")' 以啟用背景圖片) --- */
-            /* 範例：--body-background-image: url("https://example.com/your-background.jpg"); */
+            /* 範例：--body-background-image: https://example.com/your-background.jpg"); */
             /* 或：--body-background-image: url("images/background-pattern.png"); */
             /* 如果要移除背景圖片，請設回 'none'。 */
-            --body-background-image: https://pbs.twimg.com/media/Gr2MnK4X0AApzE5?format=jpg&name=small; /* 頁面背景圖片 */
+            --body-background-image: url("https://pbs.twimg.com/media/Gr2MnK4X0AApzE5?format=jpg&name=small"); /* 頁面背景圖片 */
 
             /* 'auto': 圖片原始尺寸
              * 'cover': 圖片會完全覆蓋背景區域，可能會裁切部分圖片
