--- a/index.html
+++ b/index.html
@@ -1,22 +1,66 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的圖片藝廊</title>
-    <link rel="stylesheet" href="style.css">
+    <title>3D 模型展示</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden; /* 防止捲軸 */
+            background-color: #f0f0f0; /* 可自訂背景顏色 */
+            display: flex;
+            flex-direction: column;
+            height: 100vh; /* 讓 body 佔滿整個視窗高度 */
+        }
+
+        #header {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 10px;
+            background-color: rgba(255, 255, 255, 0.7); /* 半透明背景 */
+            border-radius: 5px;
+            z-index: 10; /* 確保標頭在模型上方 */
+        }
+
+        h1 {
+            margin-top: 0;
+            margin-bottom: 5px;
+            color: #333;
+        }
+
+        .link-button {
+            display: inline-block;
+            margin-right: 10px;
+            padding: 8px 15px;
+            text-decoration: none;
+            color: #fff;
+            background-color: #007bff; /* 藍色按鈕 */
+            border-radius: 5px;
+        }
+
+        .link-button:hover {
+            background-color: #0056b3;
+        }
+
+        model-viewer {
+            width: 100%;
+            height: 100%;
+            display: block; /* 確保 model-viewer 佔滿容器 */
+        }
+    </style>
 </head>
 <body>
-    <h1>我的圖片藝廊</h1>
-    <div id="gallery-container" class="gallery-container">
-        </div>
-
-    <div id="lightbox" class="lightbox">
-        <span class="close-button">&times;</span>
-        <img class="lightbox-content" id="lightbox-img" src="" alt="">
-        <div id="lightbox-caption" class="lightbox-caption"></div>
+    <div id="header">
+        <h1>我的 3D 模型</h1>
+        <a href="https://www.youtube.com/" target="_blank" class="link-button">YouTube</a>
+        <a href="https://twitter.com/" target="_blank" class="link-button">推特</a>
+        <a href="mailto:your_email@example.com" class="link-button">信箱</a>
     </div>
 
-    <script src="script.js"></script>
+    <model-viewer src="001.glb" alt="3D 模型" auto-rotate camera-controls xr-environment="auto" shadow-intensity="1"></model-viewer>
+
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/v1.14.0/model-viewer.min.js"></script>
 </body>
 </html>
