--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@
             height: 100%;
             display: block; /* 確保 model-viewer 佔滿容器 */
         }
+
+        .progress-bar {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            z-index: 5;
+        }
+
+        .error-message {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(255, 0, 0, 0.7);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            z-index: 5;
+        }
     </style>
 </head>
 <body>
@@ -59,8 +83,29 @@
         <a href="mailto:your_email@example.com" class="link-button">信箱</a>
     </div>
 
-    <model-viewer src="001.glb" alt="3D 模型" auto-rotate camera-controls xr-environment="auto" shadow-intensity="1"></model-viewer>
+    <model-viewer src="002.glb" alt="3D 模型" auto-rotate camera-controls xr-environment="auto" shadow-intensity="1">
+        <div class="progress-bar" slot="progress">載入中... <progress value="0" max="1"></progress></div>
+        <div class="error-message" slot="error">未載入，請檢查檔案路徑或格式。</div>
+    </model-viewer>
 
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/v1.14.0/model-viewer.min.js"></script>
+    <script>
+        const modelViewer = document.querySelector('model-viewer');
+        const progressBar = modelViewer.querySelector('.progress-bar');
+
+        modelViewer.addEventListener('progress', (event) => {
+            if (event.detail.totalProgress < 1) {
+                progressBar.style.display = 'block';
+                const progress = progressBar.querySelector('progress');
+                progress.value = event.detail.totalProgress;
+            } else {
+                progressBar.style.display = 'none';
+            }
+        });
+
+        modelViewer.addEventListener('load', () => {
+            progressBar.style.display = 'none';
+        });
+    </script>
 </body>
 </html>
