--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a href="mailto:your_email@example.com" class="link-button">信箱</a>
     </div>
 
-    <model-viewer src="002.glb" alt="3D 模型" auto-rotate camera-controls xr-environment="auto" shadow-intensity="1">
+    <model-viewer src="002.glb" alt="3D 模型" auto-rotate camera-controls xr-environment="auto" shadow-intensity="1" loading="lazy">
         <div class="progress-bar" slot="progress">載入中... <progress value="0" max="1"></progress></div>
         <div class="error-message" slot="error">未載入，請檢查檔案路徑或格式。</div>
     </model-viewer>
